GCP NFS Instance Reconcilation

--- a/components/kcp/config/crd/bases/cloud-control.kyma-project.io_nfsinstances.yaml
+++ b/components/kcp/config/crd/bases/cloud-control.kyma-project.io_nfsinstances.yaml
@@ -201,6 +201,9 @@ spec:
                 type: array
               id:
                 type: string
+              opIdentifier:
+                description: Operation Identifier to track the Hyperscaler Operation
+                type: string
               state:
                 type: string
             type: object
