--- a/components/kcp/config/crd/bases/cloud-control.kyma-project.io_ipranges.yaml
+++ b/components/kcp/config/crd/bases/cloud-control.kyma-project.io_ipranges.yaml
@@ -164,6 +164,9 @@ spec:
                 x-kubernetes-list-map-keys:
                 - type
                 x-kubernetes-list-type: map
+              opIdentifier:
+                description: Operation Identifier to track the Hyperscaler Operation
+                type: string
               ranges:
                 items:
                   type: string
