--- a/components/kcp/config/crd/bases/cloud-control.kyma-project.io_nfsinstances.yaml
+++ b/components/kcp/config/crd/bases/cloud-control.kyma-project.io_nfsinstances.yaml
@@ -92,8 +92,6 @@ spec:
                 type: object
               ipRange:
                 type: string
-              kymaName:
-                type: string
               remoteRef:
                 properties:
                   name:
@@ -114,8 +112,8 @@ spec:
             required:
             - instance
             - ipRange
-            - kymaName
             - remoteRef
+            - scope
             type: object
           status:
             description: NfsInstanceStatus defines the observed state of NfsInstance
