--- a/components/kcp/config/crd/kustomization.yaml
+++ b/components/kcp/config/crd/kustomization.yaml
@@ -9,6 +9,7 @@ resources:
 - bases/cloud-resources.kyma-project.io_cloudresources.yaml
 - bases/cloud-resources.kyma-project.io_awsnfsvolumes.yaml
 - bases/cloud-resources.kyma-project.io_ipranges.yaml
+- bases/cloud-resources.kyma-project.io_gcpnfsvolumes.yaml
 #+kubebuilder:scaffold:crdkustomizeresource
 
 patches:
@@ -21,6 +22,7 @@ patches:
 #- path: patches/webhook_in_cloud-resources_cloudresources.yaml
 #- path: patches/webhook_in_cloud-resources_awsnfsvolumes.yaml
 #- path: patches/webhook_in_cloud-resources_ipranges.yaml
+#- path: patches/webhook_in_gcpnfsvolumes.yaml
 #+kubebuilder:scaffold:crdkustomizewebhookpatch
 
 # [CERTMANAGER] To enable cert-manager, uncomment all the sections with [CERTMANAGER] prefix.
@@ -32,6 +34,7 @@ patches:
 #- path: patches/cainjection_in_cloud-resources_cloudresources.yaml
 #- path: patches/cainjection_in_cloud-resources_awsnfsvolumes.yaml
 #- path: patches/cainjection_in_cloud-resources_ipranges.yaml
+#- path: patches/cainjection_in_gcpnfsvolumes.yaml
 #+kubebuilder:scaffold:crdkustomizecainjectionpatch
 
 # [WEBHOOK] To enable webhook, uncomment the following section
