--- a/components/kcp/config/rbac/role.yaml
+++ b/components/kcp/config/rbac/role.yaml
@@ -163,6 +163,32 @@ rules:
 - apiGroups:
   - cloud-resources.kyma-project.io
   resources:
+  - gcpnfsvolumes
+  verbs:
+  - create
+  - delete
+  - get
+  - list
+  - patch
+  - update
+  - watch
+- apiGroups:
+  - cloud-resources.kyma-project.io
+  resources:
+  - gcpnfsvolumes/finalizers
+  verbs:
+  - update
+- apiGroups:
+  - cloud-resources.kyma-project.io
+  resources:
+  - gcpnfsvolumes/status
+  verbs:
+  - get
+  - patch
+  - update
+- apiGroups:
+  - cloud-resources.kyma-project.io
+  resources:
   - ipranges
   verbs:
   - create
