(PHX-35) Updating GcpNfsVolume CR and adding parts of SKR reconciler for it

--- a/components/kcp/config/crd/bases/cloud-control.kyma-project.io_nfsinstances.yaml
+++ b/components/kcp/config/crd/bases/cloud-control.kyma-project.io_nfsinstances.yaml
@@ -91,7 +91,12 @@ spec:
                     type: object
                 type: object
               ipRange:
-                type: string
+                properties:
+                  name:
+                    type: string
+                required:
+                - name
+                type: object
               remoteRef:
                 properties:
                   name:
