--- a/components/kcp/config/crd/bases/cloud-resources.kyma-project.io_gcpnfsvolumes.yaml
+++ b/components/kcp/config/crd/bases/cloud-resources.kyma-project.io_gcpnfsvolumes.yaml
@@ -34,10 +34,31 @@ spec:
           spec:
             description: GcpNfsVolumeSpec defines the desired state of GcpNfsVolume
             properties:
-              foo:
-                description: Foo is an example field of GcpNfsVolume. Edit gcpnfsvolume_types.go
-                  to remove/update
+              capacityGb:
+                default: 2560
+                type: integer
+              fileShareName:
+                default: vol1
+                pattern: ^[a-z][a-z0-9_]*[a-z0-9]$
                 type: string
+              ipRange:
+                properties:
+                  name:
+                    type: string
+                required:
+                - name
+                type: object
+              location:
+                type: string
+              tier:
+                default: BASIC_HDD
+                type: string
+            required:
+            - capacityGb
+            - fileShareName
+            - ipRange
+            - location
+            - tier
             type: object
           status:
             description: GcpNfsVolumeStatus defines the observed state of GcpNfsVolume
@@ -114,6 +135,14 @@ spec:
                 x-kubernetes-list-map-keys:
                 - type
                 x-kubernetes-list-type: map
+              hosts:
+                description: List of NFS Hosts (DNS Names or IP Addresses) that clients
+                  can use to connect
+                items:
+                  type: string
+                type: array
+              state:
+                type: string
             type: object
         type: object
     served: true
