--- a/.github/workflows/pr-checks.yml
+++ b/.github/workflows/pr-checks.yml
@@ -14,19 +14,11 @@ jobs:
           go-version: '1.21'
       - name: Display Go version
         run: go version
-      - name: Build and test KCP
-        working-directory: components/kcp
+      - name: Build and test
         run: |
           go mod tidy
           go mod download
           make build
           make test
-      - name: Build and test LIB
-        working-directory: components/lib
-        run: |
-          go mod tidy
-          go mod download
-          go build ./composed
-          go test ./composed
       - name: Check modified files
         run: git diff --exit-code
