--- a/config/crd/bases/cloud-resources.kyma-project.io_gcpnfsvolumes.yaml
+++ b/config/crd/bases/cloud-resources.kyma-project.io_gcpnfsvolumes.yaml
@@ -48,8 +48,11 @@ spec:
                 properties:
                   name:
                     type: string
+                  namespace:
+                    type: string
                 required:
                 - name
+                - namespace
                 type: object
                 x-kubernetes-validations:
                 - message: IpRange is immutable.
