--- a/config/crd/bases/cloud-resources.kyma-project.io_awsnfsvolumes.yaml
+++ b/config/crd/bases/cloud-resources.kyma-project.io_awsnfsvolumes.yaml
@@ -134,6 +134,8 @@ spec:
                 x-kubernetes-list-map-keys:
                 - type
                 x-kubernetes-list-type: map
+              server:
+                type: string
             type: object
         type: object
     served: true
