--- a/config/crd/bases/cloud-resources.kyma-project.io_ipranges.yaml
+++ b/config/crd/bases/cloud-resources.kyma-project.io_ipranges.yaml
@@ -116,6 +116,8 @@ spec:
                 x-kubernetes-list-map-keys:
                 - type
                 x-kubernetes-list-type: map
+              id:
+                type: string
             type: object
         type: object
     served: true
