--- a/config/crd/bases/cloud-resources.kyma-project.io_gcpnfsvolumes.yaml
+++ b/config/crd/bases/cloud-resources.kyma-project.io_gcpnfsvolumes.yaml
@@ -159,6 +159,8 @@ spec:
                 items:
                   type: string
                 type: array
+              id:
+                type: string
             type: object
         type: object
     served: true
