--- a/config/crd/bases/cloud-resources.kyma-project.io_awsnfsvolumes.yaml
+++ b/config/crd/bases/cloud-resources.kyma-project.io_awsnfsvolumes.yaml
@@ -34,6 +34,12 @@ spec:
           spec:
             description: AwsNfsVolumeSpec defines the desired state of AwsNfsVolume
             properties:
+              capacity:
+                anyOf:
+                - type: integer
+                - type: string
+                pattern: ^(\+|-)?(([0-9]+(\.[0-9]*)?)|(\.[0-9]+))(([KMGTPE]i)|[numkMGTPE]|([eE](\+|-)?(([0-9]+(\.[0-9]*)?)|(\.[0-9]+))))?$
+                x-kubernetes-int-or-string: true
               ipRange:
                 properties:
                   name:
@@ -57,6 +63,7 @@ spec:
                 - elastic
                 type: string
             required:
+            - capacity
             - ipRange
             type: object
           status:
@@ -134,6 +141,8 @@ spec:
                 x-kubernetes-list-map-keys:
                 - type
                 x-kubernetes-list-type: map
+              id:
+                type: string
               server:
                 type: string
             type: object
