module cr reconciliation

--- a/config/crd/bases/cloud-resources.kyma-project.io_cloudresources.yaml
+++ b/config/crd/bases/cloud-resources.kyma-project.io_cloudresources.yaml
@@ -115,6 +115,9 @@ spec:
                 - type
                 x-kubernetes-list-type: map
               served:
+                enum:
+                - "True"
+                - "False"
                 type: string
               state:
                 allOf:
