fixing manifests for deployment

--- a/config/manager/kustomization.yaml
+++ b/config/manager/kustomization.yaml
@@ -1,6 +1,8 @@
 resources:
 - configmap.yaml
 - manager.yaml
+- secret-aws.yaml
+- secret-gcp.yaml
 
 configMapGenerator:
   - name: manager-env
@@ -8,7 +10,15 @@ configMapGenerator:
     literals:
       - GARDENER_NAMESPACE=garden-spm-test01
       - SKR_PROVIDERS=/var/kyma/cloud-manager/skr/providers/
+
+secretGenerator:
+  - name: manager-env-aws
+    behavior: merge
+    literals:
       - AWS_ROLE_NAME=CrossAccountPowerUser
-      - AWS_ACCESS_KEY_ID=???
-      - AWS_SECRET_ACCESS_KEY=???
-      - GCP_SA_JSON_KEY_PATH=???
+      - AWS_ACCESS_KEY_ID=xxx
+      - AWS_SECRET_ACCESS_KEY=xxx
+  - name: manager-env-gcp
+    behavior: merge
+    literals:
+      - credentials.json=xxx
