--- a/config/default/kustomization.yaml
+++ b/config/default/kustomization.yaml
@@ -14,6 +14,9 @@ namePrefix: cloud-
 #  pairs:
 #    someName: someValue
 
+commonLabels:
+  app.kubernetes.io/component: cloud-manager.kyma-project.io
+
 resources:
 - ../dist/kcp/crd
 - ../rbac
