--- a/config/manager/manager.yaml
+++ b/config/manager/manager.yaml
@@ -36,35 +36,14 @@ spec:
       labels:
         control-plane: controller-manager
     spec:
-      # TODO(user): Uncomment the following code to configure the nodeAffinity expression
-      # according to the platforms which are supported by your solution.
-      # It is considered best practice to support multiple architectures. You can
-      # build your manager image using the makefile target docker-buildx.
-      # affinity:
-      #   nodeAffinity:
-      #     requiredDuringSchedulingIgnoredDuringExecution:
-      #       nodeSelectorTerms:
-      #         - matchExpressions:
-      #           - key: kubernetes.io/arch
-      #             operator: In
-      #             values:
-      #               - amd64
-      #               - arm64
-      #               - ppc64le
-      #               - s390x
-      #           - key: kubernetes.io/os
-      #             operator: In
-      #             values:
-      #               - linux
       securityContext:
         runAsNonRoot: true
-        # TODO(user): For common cases that do not require escalating privileges
-        # it is recommended to ensure that all your Pods/Containers are restrictive.
-        # More info: https://kubernetes.io/docs/concepts/security/pod-security-standards/#restricted
-        # Please uncomment the following code if your project does NOT have to work on old Kubernetes
-        # versions < 1.19 or on vendors versions which do NOT support this field by default (i.e. Openshift < 4.11 ).
-        # seccompProfile:
-        #   type: RuntimeDefault
+        seccompProfile:
+          type: RuntimeDefault
+      volumes:
+        - name: gcp-credentials
+          secret:
+            secretName: cloud-manager-env-gcp
       containers:
       - command:
         - /manager
@@ -72,9 +51,18 @@ spec:
         - --leader-elect
         image: controller:latest
         name: manager
+        volumeMounts:
+          - name: gcp-credentials
+            mountPath: /var/run/secrets/cloud-manager.kyma-project.io/gcp
+            readOnly: true
+        env:
+          - name: GCP_SA_JSON_KEY_PATH
+            value: /var/run/secrets/cloud-manager.kyma-project.io/gcp/credentials.json
         envFrom:
           - configMapRef:
               name: cloud-manager-env
+          - secretRef:
+              name: cloud-manager-env-aws
         securityContext:
           allowPrivilegeEscalation: false
           capabilities:
