fix kymas finalizers rbac

--- a/config/rbac/role.yaml
+++ b/config/rbac/role.yaml
@@ -229,6 +229,12 @@ rules:
 - apiGroups:
   - operator.kyma-project.io
   resources:
+  - kymas/finalizers
+  verbs:
+  - update
+- apiGroups:
+  - operator.kyma-project.io
+  resources:
   - kymas/status
   verbs:
   - get
