--- a/.github/workflows/pr-checks.yml
+++ b/.github/workflows/pr-checks.yml
@@ -16,6 +16,7 @@ jobs:
         run: go version
       - name: Build and test
         run: |
+          ./config/sync.sh
           go mod tidy
           go mod download
           make build
