--- a/config/crd/kustomization.yaml
+++ b/config/crd/kustomization.yaml
@@ -10,6 +10,7 @@ resources:
 - bases/cloud-resources.kyma-project.io_awsnfsvolumes.yaml
 - bases/cloud-resources.kyma-project.io_ipranges.yaml
 - bases/cloud-resources.kyma-project.io_gcpnfsvolumes.yaml
+- bases/cloud-resources.kyma-project.io_awsnfsvolumebackups.yaml
 #+kubebuilder:scaffold:crdkustomizeresource
 
 patches:
@@ -23,6 +24,7 @@ patches:
 #- path: patches/webhook_in_cloud-resources_awsnfsvolumes.yaml
 #- path: patches/webhook_in_cloud-resources_ipranges.yaml
 #- path: patches/webhook_in_gcpnfsvolumes.yaml
+#- path: patches/webhook_in_cloud-resources_awsnfsvolumebackups.yaml
 #+kubebuilder:scaffold:crdkustomizewebhookpatch
 
 # [CERTMANAGER] To enable cert-manager, uncomment all the sections with [CERTMANAGER] prefix.
@@ -35,6 +37,7 @@ patches:
 #- path: patches/cainjection_in_cloud-resources_awsnfsvolumes.yaml
 #- path: patches/cainjection_in_cloud-resources_ipranges.yaml
 #- path: patches/cainjection_in_gcpnfsvolumes.yaml
+#- path: patches/cainjection_in_cloud-resources_awsnfsvolumebackups.yaml
 #+kubebuilder:scaffold:crdkustomizecainjectionpatch
 
 # [WEBHOOK] To enable webhook, uncomment the following section
