--- a/config/samples/kustomization.yaml
+++ b/config/samples/kustomization.yaml
@@ -8,4 +8,5 @@ resources:
 - cloud-resources_v1beta1_awsnfsvolume.yaml
 - cloud-resources_v1beta1_iprange.yaml
 - cloud-resources_v1beta1_gcpnfsvolume.yaml
+- cloud-resources_v1beta1_awsnfsvolumebackup.yaml
 #+kubebuilder:scaffold:manifestskustomizesamples
