--- a/config/samples/cloud-resources_v1beta1_cloudresources.yaml
+++ b/config/samples/cloud-resources_v1beta1_cloudresources.yaml
@@ -1,12 +1,5 @@
 apiVersion: cloud-resources.kyma-project.io/v1beta1
 kind: CloudResources
 metadata:
-  labels:
-    app.kubernetes.io/name: cloudresources
-    app.kubernetes.io/instance: cloudresources-sample
-    app.kubernetes.io/part-of: cloud-manager
-    app.kubernetes.io/managed-by: kustomize
-    app.kubernetes.io/created-by: cloud-manager
   name: cloudresources-sample
-spec:
-  # TODO(user): Add fields here
+spec: {}
