--- a/config/samples/cloud-resources_v1beta1_iprange.yaml
+++ b/config/samples/cloud-resources_v1beta1_iprange.yaml
@@ -1,12 +1,6 @@
 apiVersion: cloud-resources.kyma-project.io/v1beta1
 kind: IpRange
 metadata:
-  labels:
-    app.kubernetes.io/name: iprange
-    app.kubernetes.io/instance: iprange-sample
-    app.kubernetes.io/part-of: cloud-manager
-    app.kubernetes.io/managed-by: kustomize
-    app.kubernetes.io/created-by: cloud-manager
   name: iprange-sample
 spec:
-  # TODO(user): Add fields here
+  cidr: 10.180.0.0/16
