fix: Separate timer values for test and actual GCP provider calls

--- a/config/manager/kustomization.yaml
+++ b/config/manager/kustomization.yaml
@@ -10,6 +10,8 @@ configMapGenerator:
   - GARDENER_NAMESPACE=garden-spm-test01
   - SKR_PROVIDERS=/var/kyma/cloud-manager/skr/providers/
   - GCP_CLIENT_RENEW_DURATION=5m
+  - GCP_RETRY_WAIT_DURATION=5s
+  - GCP_OPERATION_WAIT_DURATION=5s
   name: manager-env
 
 secretGenerator:
