feat: prevent SKR IpRange deletion when used by AwsNfsVolume

--- a/.github/workflows/pr-checks.yml
+++ b/.github/workflows/pr-checks.yml
@@ -2,6 +2,8 @@ name: PR Checks
 run-name: '${{github.event.pull_request.title}}'
 'on':
   - pull_request
+env:
+  PIPELINE: true
 jobs:
   build:
     runs-on: ubuntu-latest
