--- a/config/crd/kustomization.yaml
+++ b/config/crd/kustomization.yaml
@@ -11,6 +11,7 @@ resources:
 - bases/cloud-resources.kyma-project.io_ipranges.yaml
 - bases/cloud-resources.kyma-project.io_gcpnfsvolumes.yaml
 - bases/cloud-resources.kyma-project.io_awsnfsvolumebackups.yaml
+- bases/cloud-resources.kyma-project.io_gcpnfsvolumebackups.yaml
 #+kubebuilder:scaffold:crdkustomizeresource
 
 patches:
@@ -25,6 +26,7 @@ patches:
 #- path: patches/webhook_in_cloud-resources_ipranges.yaml
 #- path: patches/webhook_in_gcpnfsvolumes.yaml
 #- path: patches/webhook_in_cloud-resources_awsnfsvolumebackups.yaml
+#- path: patches/webhook_in_cloud-resources_gcpnfsvolumebackups.yaml
 #+kubebuilder:scaffold:crdkustomizewebhookpatch
 
 # [CERTMANAGER] To enable cert-manager, uncomment all the sections with [CERTMANAGER] prefix.
@@ -38,6 +40,7 @@ patches:
 #- path: patches/cainjection_in_cloud-resources_ipranges.yaml
 #- path: patches/cainjection_in_gcpnfsvolumes.yaml
 #- path: patches/cainjection_in_cloud-resources_awsnfsvolumebackups.yaml
+#- path: patches/cainjection_in_cloud-resources_gcpnfsvolumebackups.yaml
 #+kubebuilder:scaffold:crdkustomizecainjectionpatch
 
 # [WEBHOOK] To enable webhook, uncomment the following section
