--- a/config/crd/kustomization.yaml
+++ b/config/crd/kustomization.yaml
@@ -12,6 +12,7 @@ resources:
 - bases/cloud-resources.kyma-project.io_gcpnfsvolumes.yaml
 - bases/cloud-resources.kyma-project.io_awsnfsvolumebackups.yaml
 - bases/cloud-resources.kyma-project.io_gcpnfsvolumebackups.yaml
+- bases/cloud-resources.kyma-project.io_gcpnfsvolumerestores.yaml
 #+kubebuilder:scaffold:crdkustomizeresource
 
 patches:
@@ -27,6 +28,7 @@ patches:
 #- path: patches/webhook_in_gcpnfsvolumes.yaml
 #- path: patches/webhook_in_cloud-resources_awsnfsvolumebackups.yaml
 #- path: patches/webhook_in_cloud-resources_gcpnfsvolumebackups.yaml
+#- path: patches/webhook_in_cloud-resources_gcpnfsvolumerestores.yaml
 #+kubebuilder:scaffold:crdkustomizewebhookpatch
 
 # [CERTMANAGER] To enable cert-manager, uncomment all the sections with [CERTMANAGER] prefix.
@@ -41,6 +43,7 @@ patches:
 #- path: patches/cainjection_in_gcpnfsvolumes.yaml
 #- path: patches/cainjection_in_cloud-resources_awsnfsvolumebackups.yaml
 #- path: patches/cainjection_in_cloud-resources_gcpnfsvolumebackups.yaml
+#- path: patches/cainjection_in_cloud-resources_gcpnfsvolumerestores.yaml
 #+kubebuilder:scaffold:crdkustomizecainjectionpatch
 
 # [WEBHOOK] To enable webhook, uncomment the following section
