--- a/config/ui-extensions/gcpnfsvolumerestores/kustomization.yaml
+++ b/config/ui-extensions/gcpnfsvolumerestores/kustomization.yaml
@@ -11,3 +11,4 @@ configMapGenerator:
       labels:
         busola.io/extension: resource
         busola.io/extension-version: "0.5"
+    namespace: kyma-system
