chore: feature flags

--- a/config/featureToggles/featureToggles.yaml
+++ b/config/featureToggles/featureToggles.yaml
@@ -4,6 +4,9 @@ apiDisabled:
     enabled: false
     disabled: true
   targeting:
+    - name: CloudResources module CR is always enabled
+      query: kindGroup == "cloudresource.cloud-resources.kyma-project.io"
+      variation: enabled
     - name: All APIs are disabled for trial SKR
       query: brokerPlan == "trial"
       variation: disabled
