--- a/config/featureToggles/featureToggles.yaml
+++ b/config/featureToggles/featureToggles.yaml
@@ -5,7 +5,7 @@ apiDisabled:
     disabled: true
   targeting:
     - name: CloudResources module CR is always enabled
-      query: kindGroup == "cloudresource.cloud-resources.kyma-project.io"
+      query: kindGroup == "cloudresources.cloud-resources.kyma-project.io"
       variation: enabled
     - name: All APIs are disabled for trial SKR
       query: brokerPlan == "trial"
