updated make and sync file to build and copy ui YAMLs

--- a/config/ui-extensions/kustomization.yaml
+++ b/config/ui-extensions/kustomization.yaml
@@ -1,7 +1,9 @@
 resources:
-  - awsnfsvolumes
-  - cloudresources
+#  - awsnfsvolumes
+#  - cloudresources
   - gcpnfsvolumes
+  - gcpnfsvolumebackups
+  - gcpnfsvolumerestores
   - ipranges
 #  - nfsshares
 #  - scopes
