--- a/.github/workflows/pr-checks.yml
+++ b/.github/workflows/pr-checks.yml
@@ -18,6 +18,7 @@ jobs:
         run: go version
       - name: Build and test
         run: |
+          make build_ui
           ./config/sync.sh
           go mod tidy
           go mod download
