--- a/config/crd/kustomization.yaml
+++ b/config/crd/kustomization.yaml
@@ -13,6 +13,7 @@ resources:
 - bases/cloud-resources.kyma-project.io_awsnfsvolumebackups.yaml
 - bases/cloud-resources.kyma-project.io_gcpnfsvolumebackups.yaml
 - bases/cloud-resources.kyma-project.io_gcpnfsvolumerestores.yaml
+- bases/cloud-resources.kyma-project.io_azurevpcpeerings.yaml
 #+kubebuilder:scaffold:crdkustomizeresource
 
 patches:
@@ -29,6 +30,7 @@ patches:
 #- path: patches/webhook_in_cloud-resources_awsnfsvolumebackups.yaml
 #- path: patches/webhook_in_cloud-resources_gcpnfsvolumebackups.yaml
 #- path: patches/webhook_in_cloud-resources_gcpnfsvolumerestores.yaml
+#- path: patches/webhook_in_cloud-resources_azurevpcpeerings.yaml
 #+kubebuilder:scaffold:crdkustomizewebhookpatch
 
 # [CERTMANAGER] To enable cert-manager, uncomment all the sections with [CERTMANAGER] prefix.
@@ -44,6 +46,7 @@ patches:
 #- path: patches/cainjection_in_cloud-resources_awsnfsvolumebackups.yaml
 #- path: patches/cainjection_in_cloud-resources_gcpnfsvolumebackups.yaml
 #- path: patches/cainjection_in_cloud-resources_gcpnfsvolumerestores.yaml
+#- path: patches/cainjection_in_cloud-resources_azurevpcpeerings.yaml
 #+kubebuilder:scaffold:crdkustomizecainjectionpatch
 
 # [WEBHOOK] To enable webhook, uncomment the following section
