--- a/config/crd/bases/cloud-resources.kyma-project.io_azurevpcpeerings.yaml
+++ b/config/crd/bases/cloud-resources.kyma-project.io_azurevpcpeerings.yaml
@@ -12,7 +12,7 @@ spec:
     listKind: AzureVpcPeeringList
     plural: azurevpcpeerings
     singular: azurevpcpeering
-  scope: Namespaced
+  scope: Cluster
   versions:
   - name: v1beta1
     schema:
