--- a/config/ui-extensions/gcpnfsvolumerestores/kustomization.yaml
+++ b/config/ui-extensions/gcpnfsvolumerestores/kustomization.yaml
@@ -9,6 +9,7 @@ configMapGenerator:
     options:
       disableNameSuffixHash: true
       labels:
+        cloud-manager: ui-cm
         busola.io/extension: resource
         busola.io/extension-version: "0.5"
     namespace: kyma-system
