--- a/config/rbac/role.yaml
+++ b/config/rbac/role.yaml
@@ -301,6 +301,32 @@ rules:
 - apiGroups:
   - cloud-resources.kyma-project.io
   resources:
+  - gcpvpcpeerings
+  verbs:
+  - create
+  - delete
+  - get
+  - list
+  - patch
+  - update
+  - watch
+- apiGroups:
+  - cloud-resources.kyma-project.io
+  resources:
+  - gcpvpcpeerings/finalizers
+  verbs:
+  - update
+- apiGroups:
+  - cloud-resources.kyma-project.io
+  resources:
+  - gcpvpcpeerings/status
+  verbs:
+  - get
+  - patch
+  - update
+- apiGroups:
+  - cloud-resources.kyma-project.io
+  resources:
   - ipranges
   verbs:
   - create
