--- a/config/crd/kustomization.yaml
+++ b/config/crd/kustomization.yaml
@@ -14,6 +14,7 @@ resources:
 - bases/cloud-resources.kyma-project.io_gcpnfsvolumebackups.yaml
 - bases/cloud-resources.kyma-project.io_gcpnfsvolumerestores.yaml
 - bases/cloud-resources.kyma-project.io_azurevpcpeerings.yaml
+- bases/cloud-resources.kyma-project.io_nfsbackupschedules.yaml
 #+kubebuilder:scaffold:crdkustomizeresource
 
 patches:
@@ -31,6 +32,7 @@ patches:
 #- path: patches/webhook_in_cloud-resources_gcpnfsvolumebackups.yaml
 #- path: patches/webhook_in_cloud-resources_gcpnfsvolumerestores.yaml
 #- path: patches/webhook_in_cloud-resources_azurevpcpeerings.yaml
+#- path: patches/webhook_in_cloud-resources_nfsbackupschedules.yaml
 #+kubebuilder:scaffold:crdkustomizewebhookpatch
 
 # [CERTMANAGER] To enable cert-manager, uncomment all the sections with [CERTMANAGER] prefix.
@@ -47,6 +49,7 @@ patches:
 #- path: patches/cainjection_in_cloud-resources_gcpnfsvolumebackups.yaml
 #- path: patches/cainjection_in_cloud-resources_gcpnfsvolumerestores.yaml
 #- path: patches/cainjection_in_cloud-resources_azurevpcpeerings.yaml
+#- path: patches/cainjection_in_cloud-resources_nfsbackupschedules.yaml
 #+kubebuilder:scaffold:crdkustomizecainjectionpatch
 
 # [WEBHOOK] To enable webhook, uncomment the following section
