--- a/config/rbac/role.yaml
+++ b/config/rbac/role.yaml
@@ -351,6 +351,32 @@ rules:
   - patch
   - update
 - apiGroups:
+  - cloud-resources.kyma-project.io
+  resources:
+  - nfsbackupschedules
+  verbs:
+  - create
+  - delete
+  - get
+  - list
+  - patch
+  - update
+  - watch
+- apiGroups:
+  - cloud-resources.kyma-project.io
+  resources:
+  - nfsbackupschedules/finalizers
+  verbs:
+  - update
+- apiGroups:
+  - cloud-resources.kyma-project.io
+  resources:
+  - nfsbackupschedules/status
+  verbs:
+  - get
+  - patch
+  - update
+- apiGroups:
   - operator.kyma-project.io
   resources:
   - kymas
