--- a/config/crd/kustomization.yaml
+++ b/config/crd/kustomization.yaml
@@ -15,6 +15,7 @@ resources:
 - bases/cloud-resources.kyma-project.io_gcpnfsvolumerestores.yaml
 - bases/cloud-resources.kyma-project.io_azurevpcpeerings.yaml
 - bases/cloud-resources.kyma-project.io_nfsbackupschedules.yaml
+- bases/cloud-control.kyma-project.io_redisinstances.yaml
 #+kubebuilder:scaffold:crdkustomizeresource
 
 patches:
@@ -33,6 +34,7 @@ patches:
 #- path: patches/webhook_in_cloud-resources_gcpnfsvolumerestores.yaml
 #- path: patches/webhook_in_cloud-resources_azurevpcpeerings.yaml
 #- path: patches/webhook_in_cloud-resources_nfsbackupschedules.yaml
+#- path: patches/webhook_in_cloud-control_redisinstances.yaml
 #+kubebuilder:scaffold:crdkustomizewebhookpatch
 
 # [CERTMANAGER] To enable cert-manager, uncomment all the sections with [CERTMANAGER] prefix.
@@ -50,6 +52,7 @@ patches:
 #- path: patches/cainjection_in_cloud-resources_gcpnfsvolumerestores.yaml
 #- path: patches/cainjection_in_cloud-resources_azurevpcpeerings.yaml
 #- path: patches/cainjection_in_cloud-resources_nfsbackupschedules.yaml
+#- path: patches/cainjection_in_cloud-control_redisinstances.yaml
 #+kubebuilder:scaffold:crdkustomizecainjectionpatch
 
 # [WEBHOOK] To enable webhook, uncomment the following section
