--- a/config/default/kustomization.yaml
+++ b/config/default/kustomization.yaml
@@ -18,7 +18,7 @@ commonLabels:
   app.kubernetes.io/component: cloud-manager.kyma-project.io
 
 resources:
-- ../dist/kcp/crd
+- ../crd
 - ../rbac
 - ../manager
 # [WEBHOOK] To enable webhook, uncomment all the sections with [WEBHOOK] prefix including the one in
