--- a/config/crd/kustomization.yaml
+++ b/config/crd/kustomization.yaml
@@ -16,6 +16,7 @@ resources:
 - bases/cloud-resources.kyma-project.io_azurevpcpeerings.yaml
 - bases/cloud-resources.kyma-project.io_nfsbackupschedules.yaml
 - bases/cloud-control.kyma-project.io_redisinstances.yaml
+- bases/cloud-resources.kyma-project.io_awsvpcpeerings.yaml
 #+kubebuilder:scaffold:crdkustomizeresource
 
 patches:
@@ -35,6 +36,7 @@ patches:
 #- path: patches/webhook_in_cloud-resources_azurevpcpeerings.yaml
 #- path: patches/webhook_in_cloud-resources_nfsbackupschedules.yaml
 #- path: patches/webhook_in_cloud-control_redisinstances.yaml
+#- path: patches/webhook_in_cloud-resources_awsvpcpeerings.yaml
 #+kubebuilder:scaffold:crdkustomizewebhookpatch
 
 # [CERTMANAGER] To enable cert-manager, uncomment all the sections with [CERTMANAGER] prefix.
@@ -53,6 +55,7 @@ patches:
 #- path: patches/cainjection_in_cloud-resources_azurevpcpeerings.yaml
 #- path: patches/cainjection_in_cloud-resources_nfsbackupschedules.yaml
 #- path: patches/cainjection_in_cloud-control_redisinstances.yaml
+#- path: patches/cainjection_in_cloud-resources_awsvpcpeerings.yaml
 #+kubebuilder:scaffold:crdkustomizecainjectionpatch
 
 # [WEBHOOK] To enable webhook, uncomment the following section
