--- a/tools/demo/gcpvpcpeering/skr-gcp-vpcpeering.yaml
+++ b/tools/demo/gcpvpcpeering/skr-gcp-vpcpeering.yaml
@@ -6,7 +6,7 @@ metadata:
   name: "vpcpeering-test"
   namespace: "kube-public"
 spec:
-  peeringName: "vpcpeering-sap-gcp-skr-dev-cust-00002-sap-sc-learn"
+  remotePeeringName: "vpcpeering-sap-gcp-skr-dev-cust-00002-sap-sc-learn"
   remoteProject: "sap-sc-learn"
   remoteVpc: "default"
   # Default is false.
