--- a/config/samples/cloud-resources_v1beta1_gcpvpcpeering.yaml
+++ b/config/samples/cloud-resources_v1beta1_gcpvpcpeering.yaml
@@ -9,7 +9,7 @@ metadata:
     app.kubernetes.io/created-by: cloud-manager
   name: gcpvpcpeering-sample
 spec:
-  name: "vpcpeering-sap-gcp-skr-dev-cust-00002-sap-sc-learn"
+  remotePeeringame: "vpcpeering-sap-gcp-skr-dev-cust-00002-sap-sc-learn"
   remoteProject: "sap-sc-learn"
   remoteVpc: "default"
   importCustomRoutes: false
