--- a/config/crd/kustomization.yaml
+++ b/config/crd/kustomization.yaml
@@ -17,6 +17,7 @@ resources:
 - bases/cloud-resources.kyma-project.io_nfsbackupschedules.yaml
 - bases/cloud-control.kyma-project.io_redisinstances.yaml
 - bases/cloud-resources.kyma-project.io_awsvpcpeerings.yaml
+- bases/cloud-resources.kyma-project.io_gcpredisinstances.yaml
 #+kubebuilder:scaffold:crdkustomizeresource
 
 patches:
@@ -37,6 +38,7 @@ patches:
 #- path: patches/webhook_in_cloud-resources_nfsbackupschedules.yaml
 #- path: patches/webhook_in_cloud-control_redisinstances.yaml
 #- path: patches/webhook_in_cloud-resources_awsvpcpeerings.yaml
+#- path: patches/webhook_in_cloud-resources_gcpredisinstances.yaml
 #+kubebuilder:scaffold:crdkustomizewebhookpatch
 
 # [CERTMANAGER] To enable cert-manager, uncomment all the sections with [CERTMANAGER] prefix.
@@ -56,6 +58,7 @@ patches:
 #- path: patches/cainjection_in_cloud-resources_nfsbackupschedules.yaml
 #- path: patches/cainjection_in_cloud-control_redisinstances.yaml
 #- path: patches/cainjection_in_cloud-resources_awsvpcpeerings.yaml
+#- path: patches/cainjection_in_cloud-resources_gcpredisinstances.yaml
 #+kubebuilder:scaffold:crdkustomizecainjectionpatch
 
 # [WEBHOOK] To enable webhook, uncomment the following section
