--- a/config/samples/kustomization.yaml
+++ b/config/samples/kustomization.yaml
@@ -15,4 +15,5 @@ resources:
 - cloud-resources_v1beta1_nfsbackupschedule.yaml
 - cloud-control_v1beta1_redisinstance.yaml
 - cloud-resources_v1beta1_awsvpcpeering.yaml
+- cloud-resources_v1beta1_gcpredisinstance.yaml
 #+kubebuilder:scaffold:manifestskustomizesamples
