feat(GcpRedisInstance): add feature flag for redis

--- a/pkg/feature/testdata/apiDisabled.yaml
+++ b/pkg/feature/testdata/apiDisabled.yaml
@@ -8,7 +8,7 @@ apiDisabled:
       query: brokerPlan == "trial"
       variation: disabled
     - name: Disabled APIs on stage and prod
-      query: feature in ["nfsBackup", "peering"] and landscape != "dev"
+      query: feature in ["nfsBackup", "peering", "redis"] and landscape != "dev"
       variation: disabled
   defaultRule:
     variation: enabled
