feat(GcpRedisInstance): add SKR reconciler

--- a/config/samples/cloud-resources_v1beta1_gcpredisinstance.yaml
+++ b/config/samples/cloud-resources_v1beta1_gcpredisinstance.yaml
@@ -9,4 +9,6 @@ metadata:
     app.kubernetes.io/created-by: cloud-manager
   name: gcpredisinstance-sample
 spec:
-  # TODO(user): Add fields here
+  memorySizeGb: 1
+  tier: "BASIC"
+  redisVersion: REDIS_7_0
