--- a/config/samples/cloud-resources_v1beta1_awsvpcpeering.yaml
+++ b/config/samples/cloud-resources_v1beta1_awsvpcpeering.yaml
@@ -9,4 +9,6 @@ metadata:
     app.kubernetes.io/created-by: cloud-manager
   name: awsvpcpeering-sample
 spec:
-  # TODO(user): Add fields here
+  remoteVpcId: vpc-11122233
+  remoteRegion: us-west-2
+  remoteAccountId: '123456789012'
