--- a/config/crd/bases/cloud-control.kyma-project.io_redisinstances.yaml
+++ b/config/crd/bases/cloud-control.kyma-project.io_redisinstances.yaml
@@ -41,6 +41,123 @@ spec:
                   aws:
                     type: object
                   azure:
+                    properties:
+                      apiVersion:
+                        type: string
+                        x-kubernetes-validations:
+                        - message: ApiVersion is immutable.
+                          rule: (self == oldSelf)
+                      name:
+                        type: string
+                        x-kubernetes-validations:
+                        - message: Name is immutable.
+                          rule: (self == oldSelf)
+                      properties:
+                        properties:
+                          enableNonSslPort:
+                            type: boolean
+                          redisConfiguration:
+                            properties:
+                              aad-enabled:
+                                type: string
+                              aof-backup-enabled:
+                                type: string
+                              aof-storage-connection-string-0:
+                                type: string
+                              aof-storage-connection-string-1:
+                                type: string
+                              authnotrequired:
+                                type: string
+                              maxclients:
+                                type: string
+                              maxfragmentationmemory-reserved:
+                                type: string
+                              maxmemory-delta:
+                                type: string
+                              maxmemory-policy:
+                                type: string
+                              maxmemory-reserved:
+                                type: string
+                              notify-keyspace-events:
+                                type: string
+                              preferred-data-archive-auth-method:
+                                type: string
+                              preferred-data-persistence-auth-method:
+                                type: string
+                              rdb-backup-enabled:
+                                type: string
+                              rdb-backup-frequency:
+                                enum:
+                                - 15
+                                - 30
+                                - 60
+                                - 360
+                                - 720
+                                - 1440
+                                type: string
+                              rdb-backup-max-snapshot-count:
+                                type: string
+                              rdb-storage-connection-string:
+                                type: string
+                              storage-subscription-id:
+                                type: string
+                              zonal-configuration:
+                                type: string
+                            type: object
+                          redisVersion:
+                            type: string
+                          replicasPerPrimary:
+                            type: integer
+                          shardCount:
+                            type: integer
+                          sku:
+                            properties:
+                              capacity:
+                                enum:
+                                - 0
+                                - 1
+                                - 2
+                                - 3
+                                - 4
+                                - 5
+                                - 6
+                                type: integer
+                              family:
+                                enum:
+                                - C
+                                - P
+                                type: string
+                              name:
+                                enum:
+                                - Basic
+                                - Standard
+                                - Premium
+                                type: string
+                            required:
+                            - capacity
+                            - family
+                            - name
+                            type: object
+                        type: object
+                        x-kubernetes-validations:
+                        - message: Properties are immutable.
+                          rule: (self == oldSelf)
+                      resourceGroupName:
+                        type: string
+                        x-kubernetes-validations:
+                        - message: ResourceGroupName is immutable.
+                          rule: (self == oldSelf)
+                      subscriptionId:
+                        type: string
+                        x-kubernetes-validations:
+                        - message: SubscriptionId is immutable.
+                          rule: (self == oldSelf)
+                    required:
+                    - apiVersion
+                    - name
+                    - properties
+                    - resourceGroupName
+                    - subscriptionId
                     type: object
                   gcp:
                     properties:
