--- a/config/crd/kustomization.yaml
+++ b/config/crd/kustomization.yaml
@@ -18,6 +18,7 @@ resources:
 - bases/cloud-control.kyma-project.io_redisinstances.yaml
 - bases/cloud-resources.kyma-project.io_awsvpcpeerings.yaml
 - bases/cloud-resources.kyma-project.io_gcpredisinstances.yaml
+- bases/cloud-resources.kyma-project.io_awsredisinstances.yaml
 #+kubebuilder:scaffold:crdkustomizeresource
 
 patches:
@@ -39,6 +40,7 @@ patches:
 #- path: patches/webhook_in_cloud-control_redisinstances.yaml
 #- path: patches/webhook_in_cloud-resources_awsvpcpeerings.yaml
 #- path: patches/webhook_in_cloud-resources_gcpredisinstances.yaml
+#- path: patches/webhook_in_cloud-resources_awsredisinstances.yaml
 #+kubebuilder:scaffold:crdkustomizewebhookpatch
 
 # [CERTMANAGER] To enable cert-manager, uncomment all the sections with [CERTMANAGER] prefix.
@@ -59,6 +61,7 @@ patches:
 #- path: patches/cainjection_in_cloud-control_redisinstances.yaml
 #- path: patches/cainjection_in_cloud-resources_awsvpcpeerings.yaml
 #- path: patches/cainjection_in_cloud-resources_gcpredisinstances.yaml
+#- path: patches/cainjection_in_cloud-resources_awsredisinstances.yaml
 #+kubebuilder:scaffold:crdkustomizecainjectionpatch
 
 # [WEBHOOK] To enable webhook, uncomment the following section
