feat(AwsRedisInstance): add specs for definition of CacheNodeType, EngineVersion, AutoMinorVersionUpgrade

--- a/config/samples/cloud-resources_v1beta1_awsredisinstance.yaml
+++ b/config/samples/cloud-resources_v1beta1_awsredisinstance.yaml
@@ -9,4 +9,4 @@ metadata:
     app.kubernetes.io/created-by: cloud-manager
   name: awsredisinstance-sample
 spec:
-  # TODO(user): Add fields here
+  cacheNodeType: cache.t2.micro
