--- a/config/crd/bases/cloud-resources.kyma-project.io_gcpnfsbackupschedules.yaml
+++ b/config/crd/bases/cloud-resources.kyma-project.io_gcpnfsbackupschedules.yaml
@@ -4,20 +4,31 @@ kind: CustomResourceDefinition
 metadata:
   annotations:
     controller-gen.kubebuilder.io/version: v0.13.0
-  name: nfsbackupschedules.cloud-resources.kyma-project.io
+  name: gcpnfsbackupschedules.cloud-resources.kyma-project.io
 spec:
   group: cloud-resources.kyma-project.io
   names:
-    kind: NfsBackupSchedule
-    listKind: NfsBackupScheduleList
-    plural: nfsbackupschedules
-    singular: nfsbackupschedule
+    kind: GcpNfsBackupSchedule
+    listKind: GcpNfsBackupScheduleList
+    plural: gcpnfsbackupschedules
+    singular: gcpnfsbackupschedule
   scope: Namespaced
   versions:
-  - name: v1beta1
+  - additionalPrinterColumns:
+    - jsonPath: .spec.schedule
+      name: Schedule
+      type: string
+    - jsonPath: .status.lastCreateRun
+      name: Last Run Time
+      type: date
+    - jsonPath: .status.state
+      name: State
+      type: string
+    name: v1beta1
     schema:
       openAPIV3Schema:
-        description: NfsBackupSchedule is the Schema for the nfsbackupschedules API
+        description: GcpNfsBackupSchedule is the Schema for the GcpNfsBackupSchedules
+          API
         properties:
           apiVersion:
             description: 'APIVersion defines the versioned schema of this representation
@@ -32,8 +43,14 @@ spec:
           metadata:
             type: object
           spec:
-            description: NfsBackupScheduleSpec defines the desired state of NfsBackupSchedule
+            description: GcpNfsBackupScheduleSpec defines the desired state of GcpNfsBackupSchedule
             properties:
+              deleteCascade:
+                default: false
+                description: DeleteCascade specifies whether to cascade delete the
+                  backups when this schedule is deleted. By default, deleteCascade
+                  will be false
+                type: boolean
               endTime:
                 description: EndTime specifies the time when the backup should end
                   If not provided, schedule will run indefinitely
@@ -46,9 +63,12 @@ spec:
               maxRetentionDays:
                 description: MaxRetentionDays specifies the maximum number of days
                   to retain the backup If not provided, backup will be retained indefinitely
+                  If the DeleteCascade is true for this schedule, then all the backups
+                  will be deleted when the schedule is deleted irrespective of the
+                  MaxRetentionDay configuration.
                 type: integer
               nfsVolumeRef:
-                description: NfsVolumeRef specifies the NfsVolume resource that a
+                description: NfsVolumeRef specifies the SourceRef resource that a
                   backup has to be made of.
                 properties:
                   apiVersion:
@@ -105,82 +125,22 @@ spec:
                   By default, suspend will be false
                 type: boolean
             required:
-            - location
             - nfsVolumeRef
             type: object
           status:
-            description: NfsBackupScheduleStatus defines the observed state of NfsBackupSchedule
+            description: GcpNfsBackupScheduleStatus defines the observed state of
+              GcpNfsBackupSchedule
             properties:
+              backupCount:
+                default: 0
+                description: BackupCount specifies the number of backups currently
+                  present in the system
+                type: integer
               backupIndex:
                 default: 0
                 description: BackupIndex specifies the current index of the backup
                   created by this schedule
                 type: integer
-              backups:
-                description: Backups specifies the list of backups created by this
-                  schedule
-                items:
-                  description: "ObjectReference contains enough information to let
-                    you inspect or modify the referred object. --- New uses of this
-                    type are discouraged because of difficulty describing its usage
-                    when embedded in APIs. 1. Ignored fields.  It includes many fields
-                    which are not generally honored.  For instance, ResourceVersion
-                    and FieldPath are both very rarely valid in actual usage. 2. Invalid
-                    usage help.  It is impossible to add specific help for individual
-                    usage.  In most embedded usages, there are particular restrictions
-                    like, \"must refer only to types A and B\" or \"UID not honored\"
-                    or \"name must be restricted\". Those cannot be well described
-                    when embedded. 3. Inconsistent validation.  Because the usages
-                    are different, the validation rules are different by usage, which
-                    makes it hard for users to predict what will happen. 4. The fields
-                    are both imprecise and overly precise.  Kind is not a precise
-                    mapping to a URL. This can produce ambiguity during interpretation
-                    and require a REST mapping.  In most cases, the dependency is
-                    on the group,resource tuple and the version of the actual struct
-                    is irrelevant. 5. We cannot easily change it.  Because this type
-                    is embedded in many locations, updates to this type will affect
-                    numerous schemas.  Don't make new APIs embed an underspecified
-                    API type they do not control. \n Instead of using this type, create
-                    a locally provided and used type that is well-focused on your
-                    reference. For example, ServiceReferences for admission registration:
-                    https://github.com/kubernetes/api/blob/release-1.17/admissionregistration/v1/types.go#L533
-                    ."
-                  properties:
-                    apiVersion:
-                      description: API version of the referent.
-                      type: string
-                    fieldPath:
-                      description: 'If referring to a piece of an object instead of
-                        an entire object, this string should contain a valid JSON/Go
-                        field access statement, such as desiredState.manifest.containers[2].
-                        For example, if the object reference is to a container within
-                        a pod, this would take on a value like: "spec.containers{name}"
-                        (where "name" refers to the name of the container that triggered
-                        the event) or if no container name is specified "spec.containers[2]"
-                        (container with index 2 in this pod). This syntax is chosen
-                        only to have some well-defined way of referencing a part of
-                        an object. TODO: this design is not final and this field is
-                        subject to change in the future.'
-                      type: string
-                    kind:
-                      description: 'Kind of the referent. More info: https://git.k8s.io/community/contributors/devel/sig-architecture/api-conventions.md#types-kinds'
-                      type: string
-                    name:
-                      description: 'Name of the referent. More info: https://kubernetes.io/docs/concepts/overview/working-with-objects/names/#names'
-                      type: string
-                    namespace:
-                      description: 'Namespace of the referent. More info: https://kubernetes.io/docs/concepts/overview/working-with-objects/namespaces/'
-                      type: string
-                    resourceVersion:
-                      description: 'Specific resourceVersion to which this reference
-                        is made, if any. More info: https://git.k8s.io/community/contributors/devel/sig-architecture/api-conventions.md#concurrency-control-and-consistency'
-                      type: string
-                    uid:
-                      description: 'UID of the referent. More info: https://kubernetes.io/docs/concepts/overview/working-with-objects/names/#uids'
-                      type: string
-                  type: object
-                  x-kubernetes-map-type: atomic
-                type: array
               conditions:
                 description: List of status conditions
                 items:
@@ -253,24 +213,142 @@ spec:
                 x-kubernetes-list-map-keys:
                 - type
                 x-kubernetes-list-type: map
-              lastRunTime:
-                description: LastRunTime specifies the time when the last backup was
-                  created
+              lastCreateRun:
+                description: LastCreateRun specifies the time when the last backup
+                  was created
                 format: date-time
                 type: string
-              nextRunTimes:
-                description: NextRunTimes contains 0 or more entries of time when
-                  the next backup will be created
+              lastCreatedBackup:
+                description: LastCreatedBackup contains the object reference of the
+                  backup object created during last run.
+                properties:
+                  apiVersion:
+                    description: API version of the referent.
+                    type: string
+                  fieldPath:
+                    description: 'If referring to a piece of an object instead of
+                      an entire object, this string should contain a valid JSON/Go
+                      field access statement, such as desiredState.manifest.containers[2].
+                      For example, if the object reference is to a container within
+                      a pod, this would take on a value like: "spec.containers{name}"
+                      (where "name" refers to the name of the container that triggered
+                      the event) or if no container name is specified "spec.containers[2]"
+                      (container with index 2 in this pod). This syntax is chosen
+                      only to have some well-defined way of referencing a part of
+                      an object. TODO: this design is not final and this field is
+                      subject to change in the future.'
+                    type: string
+                  kind:
+                    description: 'Kind of the referent. More info: https://git.k8s.io/community/contributors/devel/sig-architecture/api-conventions.md#types-kinds'
+                    type: string
+                  name:
+                    description: 'Name of the referent. More info: https://kubernetes.io/docs/concepts/overview/working-with-objects/names/#names'
+                    type: string
+                  namespace:
+                    description: 'Namespace of the referent. More info: https://kubernetes.io/docs/concepts/overview/working-with-objects/namespaces/'
+                    type: string
+                  resourceVersion:
+                    description: 'Specific resourceVersion to which this reference
+                      is made, if any. More info: https://git.k8s.io/community/contributors/devel/sig-architecture/api-conventions.md#concurrency-control-and-consistency'
+                    type: string
+                  uid:
+                    description: 'UID of the referent. More info: https://kubernetes.io/docs/concepts/overview/working-with-objects/names/#uids'
+                    type: string
+                type: object
+                x-kubernetes-map-type: atomic
+              lastDeleteRun:
+                description: LastDeleteRun specifies the time when the backups exceeding
+                  the retention period were deleted
+                format: date-time
+                type: string
+              lastDeletedBackups:
+                description: LastDeletedBackups contains the object references of
+                  the backup object deleted during last run.
                 items:
-                  format: date-time
+                  description: "ObjectReference contains enough information to let
+                    you inspect or modify the referred object. --- New uses of this
+                    type are discouraged because of difficulty describing its usage
+                    when embedded in APIs. 1. Ignored fields.  It includes many fields
+                    which are not generally honored.  For instance, ResourceVersion
+                    and FieldPath are both very rarely valid in actual usage. 2. Invalid
+                    usage help.  It is impossible to add specific help for individual
+                    usage.  In most embedded usages, there are particular restrictions
+                    like, \"must refer only to types A and B\" or \"UID not honored\"
+                    or \"name must be restricted\". Those cannot be well described
+                    when embedded. 3. Inconsistent validation.  Because the usages
+                    are different, the validation rules are different by usage, which
+                    makes it hard for users to predict what will happen. 4. The fields
+                    are both imprecise and overly precise.  Kind is not a precise
+                    mapping to a URL. This can produce ambiguity during interpretation
+                    and require a REST mapping.  In most cases, the dependency is
+                    on the group,resource tuple and the version of the actual struct
+                    is irrelevant. 5. We cannot easily change it.  Because this type
+                    is embedded in many locations, updates to this type will affect
+                    numerous schemas.  Don't make new APIs embed an underspecified
+                    API type they do not control. \n Instead of using this type, create
+                    a locally provided and used type that is well-focused on your
+                    reference. For example, ServiceReferences for admission registration:
+                    https://github.com/kubernetes/api/blob/release-1.17/admissionregistration/v1/types.go#L533
+                    ."
+                  properties:
+                    apiVersion:
+                      description: API version of the referent.
+                      type: string
+                    fieldPath:
+                      description: 'If referring to a piece of an object instead of
+                        an entire object, this string should contain a valid JSON/Go
+                        field access statement, such as desiredState.manifest.containers[2].
+                        For example, if the object reference is to a container within
+                        a pod, this would take on a value like: "spec.containers{name}"
+                        (where "name" refers to the name of the container that triggered
+                        the event) or if no container name is specified "spec.containers[2]"
+                        (container with index 2 in this pod). This syntax is chosen
+                        only to have some well-defined way of referencing a part of
+                        an object. TODO: this design is not final and this field is
+                        subject to change in the future.'
+                      type: string
+                    kind:
+                      description: 'Kind of the referent. More info: https://git.k8s.io/community/contributors/devel/sig-architecture/api-conventions.md#types-kinds'
+                      type: string
+                    name:
+                      description: 'Name of the referent. More info: https://kubernetes.io/docs/concepts/overview/working-with-objects/names/#names'
+                      type: string
+                    namespace:
+                      description: 'Namespace of the referent. More info: https://kubernetes.io/docs/concepts/overview/working-with-objects/namespaces/'
+                      type: string
+                    resourceVersion:
+                      description: 'Specific resourceVersion to which this reference
+                        is made, if any. More info: https://git.k8s.io/community/contributors/devel/sig-architecture/api-conventions.md#concurrency-control-and-consistency'
+                      type: string
+                    uid:
+                      description: 'UID of the referent. More info: https://kubernetes.io/docs/concepts/overview/working-with-objects/names/#uids'
+                      type: string
+                  type: object
+                  x-kubernetes-map-type: atomic
+                type: array
+              nextDeleteTimes:
+                additionalProperties:
+                  type: string
+                description: NextDeleteTimes contains the map of backup objects and
+                  their expected deletion times (calculated based on MaxRetentionDays).
+                type: object
+              nextRunTimes:
+                description: NextRunTimes contains the times when the next backup
+                  will be created
+                items:
                   type: string
                 type: array
+              schedule:
+                description: Schedule specifies the cron expression of the current
+                  active schedule
+                type: string
               state:
                 enum:
                 - Processing
                 - Pending
                 - Suspended
                 - Active
+                - Done
                 - Error
                 type: string
             type: object
