--- a/config/rbac/cloud-resources_gcpnfsbackupschedule_viewer_role.yaml
+++ b/config/rbac/cloud-resources_gcpnfsbackupschedule_viewer_role.yaml
@@ -1,20 +1,20 @@
-# permissions for end users to view nfsbackupschedules.
+# permissions for end users to view gcpnfsbackupschedules.
 apiVersion: rbac.authorization.k8s.io/v1
 kind: ClusterRole
 metadata:
   labels:
     app.kubernetes.io/name: clusterrole
-    app.kubernetes.io/instance: nfsbackupschedule-viewer-role
+    app.kubernetes.io/instance: gcpnfsbackupschedule-viewer-role
     app.kubernetes.io/component: rbac
     app.kubernetes.io/created-by: cloud-manager
     app.kubernetes.io/part-of: cloud-manager
     app.kubernetes.io/managed-by: kustomize
-  name: nfsbackupschedule-viewer-role
+  name: gcpnfsbackupschedule-viewer-role
 rules:
 - apiGroups:
   - cloud-resources.kyma-project.io
   resources:
-  - nfsbackupschedules
+  - gcpnfsbackupschedules
   verbs:
   - get
   - list
@@ -22,6 +22,6 @@ rules:
 - apiGroups:
   - cloud-resources.kyma-project.io
   resources:
-  - nfsbackupschedules/status
+  - gcpnfsbackupschedules/status
   verbs:
   - get
