feat(AwsRedisInstance): add option to define maintenance policy

--- a/config/samples/cloud-resources_v1beta1_awsredisinstance.yaml
+++ b/config/samples/cloud-resources_v1beta1_awsredisinstance.yaml
@@ -16,3 +16,5 @@ spec:
   engineVersion: "7.0"
   autoMinorVersionUpgrade: true
   transitEncryptionEnabled: true
+  preferredMaintenanceWindow: sun:23:00-mon:01:30
+
