--- a/config/samples/kustomization.yaml
+++ b/config/samples/kustomization.yaml
@@ -17,4 +17,5 @@ resources:
 - cloud-resources_v1beta1_awsvpcpeering.yaml
 - cloud-resources_v1beta1_gcpredisinstance.yaml
 - cloud-resources_v1beta1_awsredisinstance.yaml
+- cloud-resources_v1beta1_cceenfsvolume.yaml
 #+kubebuilder:scaffold:manifestskustomizesamples
